Alteração codigo aula 10

--- a/aula10/index.html
+++ b/aula10/index.html
@@ -8,10 +8,10 @@
 
     <style>
 
-        /*.section-one,
+        .section-one,
         .section-two{
             box-sizing: border-box;
-        }*/
+        }
 
         .section-one{
             background: deeppink;
@@ -22,7 +22,7 @@
             width: 200px;
             height: 50px;
             padding: 10px;
-            border: 5px solid black;
+            border: 10px solid black;
             margin: 20px;
         }
 
@@ -46,7 +46,7 @@
 </head>
 <body>
     <section class="section-one">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, natus. Veniam eius o
+      
     </section>
     <section class="section-two">2</section>
 </body>
