--- a/aula10/index.html
+++ b/aula10/index.html
@@ -8,10 +8,16 @@
 
     <style>
 
-        .section-one,
-        .section-two{
+        *{
+            margin: 0;
+            padding: 0;
             box-sizing: border-box;
         }
+
+       /* .section-one,
+        .section-two{
+            box-sizing: border-box;
+        }*/
 
         .section-one{
             background: deeppink;
@@ -19,8 +25,8 @@
             background-image: url(https://st4.depositphotos.com/25524952/31566/i/600/depositphotos_315667686-stock-photo-enchanting-walk-through-wet-eucalyptus.jpg);
             background-position: center center;
             color: #fff;
-            width: 200px;
-            height: 50px;
+            width: 300px;
+            height: 150px;
             padding: 10px;
             border: 10px solid black;
             margin: 20px;
@@ -28,8 +34,8 @@
 
         .section-two{
             background: cyan;
-            width: 200px;
-            height: 50px;
+            width: 300px;
+            height: 150px;
             padding: 10px;
             /*border: 10px solid black; ou*/
             border-width: 10px;
@@ -46,7 +52,7 @@
 </head>
 <body>
     <section class="section-one">
-      
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi ea totam nostrum possimus tenetur, laborum ipsa aliquam temporibus officiis dolorem ipsam culpa tempora dolore. Distinctio natus veniam culpa dolore ipsum.
     </section>
     <section class="section-two">2</section>
 </body>
