--- a/aula11/index.html
+++ b/aula11/index.html
@@ -13,8 +13,7 @@
         }
 
         nav {
-            background: black;
-            height: 70px;
+            background: red;
         }
 
         /*body nav ul li a {
@@ -27,13 +26,31 @@
             color: #fff;
             text-decoration: none;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+          
+            padding: 10px 20px;
+            display: block;
+            text-transform: uppercase;
         }
+
+        nav a:hover{
+            background: rgba(0, 0, 0, 0.3);
+        }
+
+        nav {
+            display: flex;
+            align-items: center;
+        }
+
+        nav ul{
+            
+            display: flex;
+            list-style: none;
+        }
+
     </style>
 
 </head>
 <body>
-    <h1>Trabalhando com Listas</h1>
-
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
