--- a/testes/pratica-aula11.html
+++ b/testes/pratica-aula11.html
@@ -5,16 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pratica Aula 11</title>
+
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        }
+
+        .header-a{
+            background: #9b0f0f;
+            padding: 15px;
+            display: flex;
+            align-items: center;
+            height: 50px;;
+        }
+
+        img{
+            width: 30px;
+            height: 30px;
+        }
+
+        nav a{
+            text-decoration: none;
+            color: #ffffff;
+            margin: 15px;
+            padding: 15px;
+        }
+
+        nav ul{
+            display: flex;
+            list-style: none;
+        }
+
+        nav a:hover{
+            background-color: rgba(0, 0, 0, 0.2);
+        }
+
+
+    </style>
+
 </head>
 <body>
-    <div>
+    <header class="header-a">
+        <a href="https://www.sanrio.com.br/"><img src="https://www.freeiconspng.com/thumbs/hello-kitty-png-icon/hello-kitty-png-icon-17.png" alt="hello-kitty-img" target="_blank"></a>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Sobre</li>
-                <li>Contatos</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Contatos</a></li>
             </ul>
         </nav>
-    </div>
+    </header>
 </body>
 </html>
