--- a/testes/header-revisao.html
+++ b/testes/header-revisao.html
@@ -25,7 +25,7 @@
             text-decoration: none;
             color: #000000;
             margin: 10px;
-            padding: 16px 10px;
+            padding: 1px 10px;
         }
         
         a:hover{
@@ -44,17 +44,9 @@
     <header class="cabecalho">
         <nav>
             <ul>
-                <a href="#">
-                    <li>Pagina Principal</li>
-                </a>
-
-                <a href="#">
-                    <li>Sobre nós</li>
-                </a>
-                
-                <a href="#">
-                    <li>Fale conosco</li>
-                </a>
+                <li><a href="#">Pagina Principal</a></li>
+                <li><a href="#"></a>Sobre nós</li>
+                <li><a href="#">Fale conosco</a></li>
             </ul>
         </nav>
     </header>
