--- a/testes/header-revisao.html
+++ b/testes/header-revisao.html
@@ -25,7 +25,7 @@
             text-decoration: none;
             color: #000000;
             margin: 10px;
-            padding: 1px 10px;
+            padding: 16px 10px;
         }
         
         a:hover{
@@ -45,7 +45,7 @@
         <nav>
             <ul>
                 <li><a href="#">Pagina Principal</a></li>
-                <li><a href="#"></a>Sobre nós</li>
+                <li><a href="#">Sobre nós</a></li>
                 <li><a href="#">Fale conosco</a></li>
             </ul>
         </nav>
