Ocupando mais de uma coluna

--- a/aula12/index.html
+++ b/aula12/index.html
@@ -20,6 +20,15 @@
         table td, table th {
             border: 1px solid #ccc;
             padding: 5px;
+            text-align: left;
+        }
+
+        tfoot td, table th{
+            background: #ddd;
+        }
+
+        tfoot td {
+            font-style: italic;
         }
 
         table caption {
@@ -53,11 +62,23 @@
             <td>Corpo 3</td>
         </tr>
         <tr>
-            <td>Corpo 4</td>
-            <td>Corpo 5</td>
+            <td colspan="2">Corpo 4</td>
             <td>Corpo 6</td>
         </tr>
+        <tr>
+            <td>Corpo 7</td>
+            <td>Corpo 8</td>
+            <td>Corpo 9</td>
+        </tr>
        </tbody>
+
+       <tfoot>
+        <tr>
+            <td>Footer</td>
+            <td>Footer</td>
+            <td>Footer</td>
+        </tr>
+       </tfoot>
     </table>
 </body>
 </html>
