--- a/aula12/index.html
+++ b/aula12/index.html
@@ -62,11 +62,10 @@
             <td>Corpo 3</td>
         </tr>
         <tr>
-            <td colspan="3">Corpo 4</td>
+            <td colspan="2" rowspan="2">Corpo 4</td>
+            <td>Corpo 6</td>
         </tr>
         <tr>
-            <td>Corpo 7</td>
-            <td>Corpo 8</td>
             <td>Corpo 9</td>
         </tr>
        </tbody>
