Modificando a footer da tabela

--- a/aula12/index.html
+++ b/aula12/index.html
@@ -62,18 +62,22 @@
             <td>Corpo 3</td>
         </tr>
         <tr>
-            <td colspan="2" rowspan="2">Corpo 4</td>
+            <td colspan="2">Corpo 4</td>
             <td>Corpo 6</td>
         </tr>
         <tr>
+            <td>Corpo 7</td>
+            <td>Corpo 8</td>
             <td>Corpo 9</td>
         </tr>
        </tbody>
 
        <tfoot>
         <tr>
+            <td colspan="2" rowspan="2"></td>
             <td>Footer</td>
-            <td>Footer</td>
+        </tr>
+        <tr>
             <td>Footer</td>
         </tr>
        </tfoot>
