Revisão tabela aula 576, correção

--- a/testes/tabela-revisao.html
+++ b/testes/tabela-revisao.html
@@ -86,7 +86,7 @@
         <tfoot>
             <tr>
                 <td colspan="5" rowspan="2"></td>
-                <td style="background: #8a898a">Total:</td>
+                <td style="background: #acaaaa;">Total:</td>
             </tr>
 
             <tr>
