--- a/testes/tabela-revisao.html
+++ b/testes/tabela-revisao.html
@@ -34,67 +34,65 @@
 </head>
 
 <body>
-    <table class="tabela">
-        <caption>Livros comprados em 2023</caption>
-        <thead>
-            <tr>
-                <th>Quantidade</th>
-                <th>Titulo</th>
-                <th>Ano</th>
-                <th>Autor</th>
-                <th>Editora</th>
-                <th>Valor</th>
-            </tr>
-        </thead>
-
-        <tbody>
-            <tr>
-                <td>1x</td>
-                <td>Boku no hero</td>
-                <td>2014</td>
-                <td>Kohei</td>
-                <td>JBC</td>
-                <td>R$ 29,90</td>
-            </tr>
-            <tr>
-                <td>1x</td>
-                <td>Shingeki no Kyojin</td>
-                <td>2009</td>
-                <td>Hajime</td>
-                <td>Panini</td>
-                <td>R$ 29,90</td>
-            </tr>
-
-            <tr>
-                <td>1x</td>
-                <td>Nana</td>
-                <td>2000</td>
-                <td>Yazawa</td>
-                <td>JBC</td>
-                <td>R$ 33,90</td>
-            </tr>
-            <tr>
-                <td>1x</td>
-                <td>Given</td>
-                <td>2020</td>
-                <td>Natsuki</td>
-                <td>NewPop</td>
-                <td>R$ 29,90</td>
-            </tr>     
-        </tbody>
-
-        <tfoot>
-            <tr>
-                <td colspan="5" rowspan="2"></td>
-                <td style="background: #acaaaa;">Total:</td>
-            </tr>
-
-            <tr>
-               <td colspan="5">
-                R$ 123,60</td>
-            </tr>
-        </tfoot>
-    </table>
+    <div>
+        <table class="tabela">
+            <caption>Livros comprados em 2023</caption>
+            <thead>
+                <tr>
+                    <th>Quantidade</th>
+                    <th>Titulo</th>
+                    <th>Ano</th>
+                    <th>Autor</th>
+                    <th>Editora</th>
+                    <th>Valor</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1x</td>
+                    <td>Boku no hero</td>
+                    <td>2014</td>
+                    <td>Kohei</td>
+                    <td>JBC</td>
+                    <td>R$ 29,90</td>
+                </tr>
+                <tr>
+                    <td>1x</td>
+                    <td>Shingeki no Kyojin</td>
+                    <td>2009</td>
+                    <td>Hajime</td>
+                    <td>Panini</td>
+                    <td>R$ 29,90</td>
+                </tr>
+                <tr>
+                    <td>1x</td>
+                    <td>Nana</td>
+                    <td>2000</td>
+                    <td>Yazawa</td>
+                    <td>JBC</td>
+                    <td>R$ 33,90</td>
+                </tr>
+                <tr>
+                    <td>1x</td>
+                    <td>Given</td>
+                    <td>2020</td>
+                    <td>Natsuki</td>
+                    <td>NewPop</td>
+                    <td>R$ 29,90</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="5" rowspan="2"></td>
+                    <td style="background: #acaaaa;">Total:</td>
+                </tr>
+                <tr>
+                   <td colspan="5">
+                    R$ 123,60</td>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
 </body>
 
 </html>
