--- a/aula13-14-15/index.html
+++ b/aula13-14-15/index.html
@@ -18,7 +18,7 @@
     <form action="#" method="get" target="_blank" autocomplete="off">
         <p>O meu forulário</p>
         <p>
-            <input type="text" id="nome" name="nome" placeholder="Seu nome" disabled>
+            <input type="text" id="nome" name="nome" placeholder="Seu nome" readonly>
         </p>
     </form>
 </body>
