--- a/aula13-14-15/index.html
+++ b/aula13-14-15/index.html
@@ -11,6 +11,10 @@
         * {
             font-family: sans-serif;
         }
+
+        label{
+            cursor: pointer;
+        }
     </style>
 </head>
 
@@ -18,7 +22,14 @@
     <form action="#" method="get" target="_blank" autocomplete="off">
         <p>O meu forulário</p>
         <p>
-            <input type="text" id="nome" name="nome" placeholder="Seu nome" readonly>
+            <label>
+                Nome:
+                <input type="text" id="nome" name="nome" placeholder="Seu nome">
+            </label>
+        </p>
+        <p>
+            <button type="reset">Reset</button>
+            <button type="submit">Enviar</button>
         </p>
     </form>
 </body>
