--- a/aula13-14-15/index.html
+++ b/aula13-14-15/index.html
@@ -14,6 +14,7 @@
 
         label{
             cursor: pointer;
+            display: block;
         }
     </style>
 </head>
@@ -22,10 +23,10 @@
     <form action="#" method="get" target="_blank" autocomplete="off">
         <p>O meu forulário</p>
         <p>
-            <label>
+            <label for="nome">
                 Nome:
-                <input type="text" id="nome" name="nome" placeholder="Seu nome">
             </label>
+            <input type="text" id="nome" name="nome" placeholder="Seu nome">
         </p>
         <p>
             <button type="reset">Reset</button>
