Checkbox + Campo requerido

--- a/aula13-14-15/index.html
+++ b/aula13-14-15/index.html
@@ -14,7 +14,7 @@
 
         label{
             cursor: pointer;
-            display: block;
+            font-size: 15px;
         }
     </style>
 </head>
@@ -23,10 +23,12 @@
     <form action="#" method="get" target="_blank" autocomplete="off">
         <p>O meu forulário</p>
         <p>
-            <label for="nome">
-                Nome:
-            </label>
-            <input type="text" id="nome" name="nome" placeholder="Seu nome">
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" name="nome" placeholder="Seu nome" required>
+        </p>
+        <p>
+            <label for="dev">Sou um dev</label>
+            <input type="checkbox" id="dev" value="sim" checked>
         </p>
         <p>
             <button type="reset">Reset</button>
