Revisão forms e inputs, aula 14 - Login

--- a/testes/revisao-forms-inh.html
+++ b/testes/revisao-forms-inh.html
@@ -43,6 +43,7 @@
             padding: 3px;
             border:#200370 solid;
             border-radius: 0.5em;
+            outline: none;
         }
 
         .botao{
