--- a/testes/revisao-forms-2.html
+++ b/testes/revisao-forms-2.html
@@ -9,20 +9,52 @@
     <style>
         *{
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
 
         div{
-            margin: 20px 0;
+            margin: 20px 10px;
+        }
+
+        header{
+            background: #44066d;
+            padding: 20px 0;
+        }
+
+        ul{
+            display: flex;
+            list-style: none;
+        }
+
+        li a{
+            text-decoration: none;
+            color:rgba(39, 226, 154, 0.781);
+            margin: 10px;
+            padding: 18px 20px;
+        }
+
+        a:hover{
+            background: #bbb5b513;
         }
 
     </style>
 
 </head>
 <body>
+    <header>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact-us</a></li>
+        </ul>
+    </header>
+
     <section>
         <form action="#">
-            <h1>Formulário</h1>
             <div>
+                <h1>Formulário</h1>
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome" autocomplete="off" value="">
             </div>
