Adição do campo de Data Type Date - Aula 15 (580)

--- a/aula13-14-15/index.html
+++ b/aula13-14-15/index.html
@@ -48,6 +48,12 @@
             <label for="naobinario">Não-Binário</label>
             <input type="radio" id="naobinario" name="genero" checked><br>
         </p>
+
+        <p>
+            <label for="date">Date:</label>
+            <input type="date" id="date" name="date">
+        </p>
+
         <p>
             <button type="reset">Reset</button>
             <button type="submit">Enviar</button>
