Adição do campo de Data Type Date - Aula 15 (580)

--- a/aula13-14-15/index.html
+++ b/aula13-14-15/index.html
@@ -51,7 +51,7 @@
 
         <p>
             <label for="date">Date:</label>
-            <input type="date" id="date" name="date">
+            <input type="date" id="date" name="date" value="2020-04-20">
         </p>
 
         <p>
