Adição do campo de Data Type Datetime - Aula 15 (580)

--- a/aula13-14-15/index.html
+++ b/aula13-14-15/index.html
@@ -55,6 +55,11 @@
         </p>
 
         <p>
+            <label for="datetime">Date:</label>
+            <input type="datetime-local" id="datetime" name="datetime" value="2023-02-23">
+        </p>
+
+        <p>
             <button type="reset">Reset</button>
             <button type="submit">Enviar</button>
         </p>
