Adição do campo de Cor Type Color  - Aula 15 (580)

--- a/aula13-14-15/index.html
+++ b/aula13-14-15/index.html
@@ -65,6 +65,11 @@
         </p>
 
         <p>
+            <label for="cor">Cor preferida: </label>
+            <input type="color" name="cor" id="cor" value="#ff1ac6">
+        </p>
+
+        <p>
             <button type="reset">Reset</button>
             <button type="submit">Enviar</button>
         </p>
