Adição do campo de Email Type Email  - Aula 15 (580)

--- a/aula13-14-15/index.html
+++ b/aula13-14-15/index.html
@@ -70,6 +70,11 @@
         </p>
 
         <p>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" placeholder="Ex: meuemail@email.com">
+        </p>
+
+        <p>
             <button type="reset">Reset</button>
             <button type="submit">Enviar</button>
         </p>
