--- a/aula13-14-15/index.html
+++ b/aula13-14-15/index.html
@@ -75,6 +75,16 @@
         </p>
 
         <p>
+            <label for="file">Sua foto:</label>
+            <input type="file" name="file" id="file" accept=".png, .svg, image/*" multiple>
+        </p>
+
+        <p>
+            <label for="number">Number:</label>
+            <input type="number" id="number" name="number" placeholder="Selecione um número">
+        </p>
+
+        <p>
             <button type="reset">Reset</button>
             <button type="submit">Enviar</button>
         </p>
