--- a/aula13-14-15/index.html
+++ b/aula13-14-15/index.html
@@ -81,7 +81,7 @@
 
         <p>
             <label for="number">Number:</label>
-            <input type="number" id="number" name="number" placeholder="Selecione um número">
+            <input type="number" id="number" name="number" placeholder="Selecione um número" min="10" max="50" step="5">
         </p>
 
         <p>
