Mais inputs types praticados da aula 15 (580)

--- a/testes/revisao-inputs.html
+++ b/testes/revisao-inputs.html
@@ -72,6 +72,16 @@
                 <label for="time">Tempo:</label>
                 <input type="time" name="time" id="time" value="20:40">
             </p>
+
+            <p>
+                <label for="color">Cor:</label>
+                <input type="color" value="#f34fff">
+            </p>
+
+            <p>
+                <label for="arquivo">Arquivos:</label>
+                <input type="file" name="arquivo" id="arquivo" multiple accept="image/*">
+            </p>
         </form>
     </section>
     
