--- a/aula13-14-15-16/index.html
+++ b/aula13-14-15-16/index.html
@@ -16,6 +16,10 @@
             cursor: pointer;
             font-size: 15px;
         }
+
+        input {
+            outline: none;
+        }
     </style>
 </head>
 
@@ -81,12 +85,17 @@
 
         <p>
             <label for="number">Number:</label>
-            <input type="number" id="number" name="number" placeholder="Selecione um número" min="10" max="50" step="5">
+            <input type="number" id="number" name="number" min="10" max="50" step="5">
         </p>
 
         <p>
             <button type="reset">Reset</button>
             <button type="submit">Enviar</button>
+        </p>
+
+        <p>
+            <label for="senha">Senha:</label>
+            <input type="password" name="senha" id="senha" placeholder="Digite sua senha">
         </p>
     </form>
 </body>
