Aula 16 (580) Adicionando input type range

--- a/aula13-14-15-16/index.html
+++ b/aula13-14-15-16/index.html
@@ -97,6 +97,13 @@
             <label for="senha">Senha:</label>
             <input type="password" name="senha" id="senha" placeholder="Digite sua senha">
         </p>
+
+        <p>
+            <label for="range">Range:</label>
+            <input type="range" name="range" id="range" min="0" max="10" step="2">
+
+          
+        </p>
     </form>
 </body>
 
