Aula 16 (580) - Optgroup dentro da tag Select

--- a/aula13-14-15-16/index.html
+++ b/aula13-14-15-16/index.html
@@ -20,7 +20,8 @@
         input {
             outline: none;
         }
-/*pego na internet, site do mdn para colocar os labels no range*/
+
+        /*pego na internet, site do mdn para colocar os labels no range*/
         datalist {
             display: flex;
             flex-direction: column;
@@ -38,7 +39,8 @@
             width: 200px;
             margin: 0;
         }
-/*para mais: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/range*/
+
+        /*para mais: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/range*/
     </style>
 </head>
 
@@ -135,8 +137,39 @@
             <label for="url">Sua URL</label>
             <input type="url" name="url" id="url" placeholder="Insira a URL">
         </p>
-        
 
+        <p>
+            <label for="search">Sua URL</label>
+            <input type="search" name="search" id="search" placeholder="pesquise">
+        </p>
+
+        <p>
+            <label for="select">Selecione alguma opção</label>
+
+            <!-- <select name="select" id="select">
+                <option value="qualquer">Valor mostrado entre as tags</option>
+                <option value="qualquertb" label="Mesma coisa só que com label">
+                <option value="outro">Outro</option>
+                <option value="outro 2"></option>
+            </select> -->
+
+            <select name="select" id="select" multiple>
+                <optgroup label="Teste">
+                    <option value="qualquer 1" label="valor 1">
+                    <option value="qualquer 2" label="valor 2" disabled>
+                    <option value="qualquer 3" label="valor 3">
+                    <option value="qualquer 4" label="valor 4" selected>
+                    <option value="qualquer 5" label="valor 5">
+                </optgroup>
+
+                <optgroup label="Teste 2">
+                    <option value="qualquer a" label="valor a">
+                    <option value="qualquer b" label="valor b">
+                    <option value="qualquer c" label="valor c">
+                    <option value="qualquer d" label="valor d">
+                </optgroup>
+            </select>
+        </p>
 
         <p>
             <button type="reset">Reset</button>
