Aula 16 (580) Trabalhando com text area

--- a/aula13-14-15-16/index.html
+++ b/aula13-14-15-16/index.html
@@ -153,7 +153,7 @@
                 <option value="outro 2"></option>
             </select> -->
 
-            <select name="select" id="select" multiple>
+            <select name="select" id="select">
                 <optgroup label="Teste">
                     <option value="qualquer 1" label="valor 1">
                     <option value="qualquer 2" label="valor 2" disabled>
@@ -169,6 +169,11 @@
                     <option value="qualquer d" label="valor d">
                 </optgroup>
             </select>
+        </p>
+
+        <p>
+            <label for="textarea">text area</label>
+            <textarea name="textarea" id="textarea" cols="30" rows="10">Pode adicionar texto se quiser</textarea>
         </p>
 
         <p>
