--- a/testes/revisao-inputs-types.html
+++ b/testes/revisao-inputs-types.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Revisao</title>
-
-    <style>
-        div {
-            text-align: center;
-        }
-    </style>
-
 </head>
+
 <body>
     <div>
         <form action="#">
@@ -26,7 +21,19 @@
                     <option value="Não vota 2" label="criança">
                 </optgroup>
             </select>
+            <p>
+
+                <label for="pesquisa">Pesquise aqui:</label>
+                <input type="search" name="pesquisa" id="pesquisa">
+            </p>
+
+            <p>
+                <label for="url">Buscar:</label>
+                <input type="url" name="url" id="url">
+            </p>
+         
         </form>
     </div>
 </body>
+
 </html>
