--- a/testes/revisao-inputs-types.html
+++ b/testes/revisao-inputs-types.html
@@ -6,6 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Revisao</title>
+
+    <style>
+        datalist{
+            display: flex;
+            flex-direction: column;
+            writing-mode: vertical-lr;
+            justify-content: space-between;
+            width: 100px;
+        }
+
+        input[type=range]{
+            width: 100px;
+        }
+    </style>
 </head>
 
 <body>
@@ -28,8 +42,18 @@
             </p>
 
             <p>
-                <label for="url">Buscar:</label>
+                <label for="url">Buscar Por URL:</label>
                 <input type="url" name="url" id="url">
+            </p>
+
+            <p>
+                <label for="range">Arranjo:</label><br>
+                <input type="range" name="range" id="range" list="range">
+                <datalist id="range">
+                    <option value="0" label="0%">
+                    <option value="50" label="50%">
+                    <option value="100" label="100%">
+                </datalist>
             </p>
          
         </form>
