--- a/aula17/index.html
+++ b/aula17/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 17</title>
+
+    <style>
+        .caixa {
+            background-color: red;
+            height: 120px;
+            width: 120px;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="caixa">
+        <div style="background: yellow; width: 120px; height: 120px;"></div>
+    </div>
 </body>
 </html>
