Aula 19 (583) Trabalhando com regras de seletores no css

--- a/aula19/index.html
+++ b/aula19/index.html
@@ -12,9 +12,10 @@
 
 <body>
     <div>
+        <h1>Lorem ipsum</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, quam similique officia cupiditate exercitationem quis. Magnam cupiditate, recusandae ut sed quo voluptate ratione quae sit delectus eaque soluta neque blanditiis.</p>
         <section>
-            <h1>lorem ipsum</h1>
+            <h1>Lorem ipsum</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde at iste mollitia molestiae maiores
                 dignissimos repudiandae, ratione odio qui culpa ea asperiores accusamus, a libero itaque sit maxime
                 voluptate beatae!</p>
@@ -28,5 +29,6 @@
                 eos.</p>
         </section>
     </div>
+    <h1>sssss</h1>
 </body>
 </html>
