--- a/aula19/index.html
+++ b/aula19/index.html
@@ -11,24 +11,18 @@
 </head>
 
 <body>
-    <div>
-        <h1>Lorem ipsum</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, quam similique officia cupiditate exercitationem quis. Magnam cupiditate, recusandae ut sed quo voluptate ratione quae sit delectus eaque soluta neque blanditiis.</p>
-        <section>
-            <h1>Lorem ipsum</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde at iste mollitia molestiae maiores
-                dignissimos repudiandae, ratione odio qui culpa ea asperiores accusamus, a libero itaque sit maxime
-                voluptate beatae!</p>
-            <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus pariatur tempora quis ullam quisquam quam
-                quaerat quas architecto commodi veritatis! Saepe exercitationem minus esse dignissimos eveniet aperiam
-                optio delectus maxime?</p>
-            <br>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum molestiae ut repellendus quod illo
-                veniam, cumque laborum atque quia modi totam accusamus explicabo ipsum sequi optio dicta dolorem minus
-                eos.</p>
-        </section>
+    <h1 class="color-red">
+        Lorem ipsum
+    </h1>
+    <h1>Lorem ipsum</h1>
+
+    <p class="color-red">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum unde odio qui quos repudiandae consequatur quasi necessitatibus dicta ratione fuga itaque alias, voluptates corrupti velit iure optio vel saepe asperiores.
+    </p>
+
+    <div class="main-content">
+        <h2>lorem</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum molestias laborum necessitatibus, harum enim, corrupti itaque est porro placeat, expedita nobis adipisci nulla? Ipsa, odit velit nobis incidunt autem asperiores?</p>
     </div>
-    <h1>sssss</h1>
 </body>
 </html>
