--- a/aula19/index.html
+++ b/aula19/index.html
@@ -11,17 +11,10 @@
 </head>
 
 <body>
-    <h1 class="color-red">
-        Lorem ipsum
-    </h1>
-    <h1>Lorem ipsum</h1>
-
-    <p class="color-red">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum unde odio qui quos repudiandae consequatur quasi necessitatibus dicta ratione fuga itaque alias, voluptates corrupti velit iure optio vel saepe asperiores.
-    </p>
-
     <div class="main-content">
-        <h2>lorem</h2>
+        <h1 class="heading">lorem</h2>
+        <h2 class="heading">lorem</h2>
+        <h3 class="heading">lorem</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum molestias laborum necessitatibus, harum enim, corrupti itaque est porro placeat, expedita nobis adipisci nulla? Ipsa, odit velit nobis incidunt autem asperiores?</p>
     </div>
 </body>
