Trabalhando com especificidade de classes + seletores por tag

--- a/aula19/index.html
+++ b/aula19/index.html
@@ -10,12 +10,16 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<body>
+<body class="error">
     <div class="main-content">
         <h1 class="heading">lorem</h2>
         <h2 class="heading">lorem</h2>
         <h3 class="heading">lorem</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum molestias laborum necessitatibus, harum enim, corrupti itaque est porro placeat, expedita nobis adipisci nulla? Ipsa, odit velit nobis incidunt autem asperiores?</p>
     </div>
+
+    <section class="main-content">
+        <h2 class="heading">lorem</h2>
+    </section>
 </body>
 </html>
