--- a/aula19/index.html
+++ b/aula19/index.html
@@ -11,15 +11,11 @@
 </head>
 
 <body class="error">
-    <div class="main-content">
-        <h1 class="heading">lorem</h2>
-        <h2 class="heading">lorem</h2>
-        <h3 class="heading">lorem</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum molestias laborum necessitatibus, harum enim, corrupti itaque est porro placeat, expedita nobis adipisci nulla? Ipsa, odit velit nobis incidunt autem asperiores?</p>
+    <div class="pai">
+        Pai
+        <div>
+            Filha
+        </div>
     </div>
-
-    <section class="main-content">
-        <h2 class="heading">lorem</h2>
-    </section>
 </body>
 </html>
