Selecionando elementos com duas classes

--- a/aula19/index.html
+++ b/aula19/index.html
@@ -13,7 +13,7 @@
 <body class="error">
     <div class="pai">
         Pai
-        <div>
+        <div class="filha outra pai outra classe">
             Filha
         </div>
     </div>
