Trabalhando com filhas e netas

--- a/aula19/index.html
+++ b/aula19/index.html
@@ -13,8 +13,18 @@
 <body class="error">
     <div class="pai">
         Pai
-        <div class="filha outra pai outra classe">
-            Filha
+        <div class="filha outra outra-classe">
+            Filha 1
+            <div class="filha outra outra-classe">
+                filha da filha
+            </div>
+        </div>
+
+        <div class="filha outra outra-classe">
+            Filha 2
+            <div class="filha outra outra-classe">
+                filha da filha
+            </div>
         </div>
     </div>
 </body>
