General sibling selector

--- a/aula19-20 (583-584)/index.html
+++ b/aula19-20 (583-584)/index.html
@@ -12,15 +12,19 @@
 
 <body class="error">
     <div class="pai">
-        <h1>Lorem</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-
-        <h1>Lorem</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <div class="dois">2</div>
+       <div class="um">1</div>
+       <div class="dois">2</div>
+       <div class="dois">2</div>
+       <div class="dois">2</div>
+       <div class="dois">2</div>
+       <div class="dois">2</div>
+       <div class="um">1</div>
+       <div class="dois">2</div>
+       <div class="dois">2</div>
+       <div class="dois">2</div>
+       <div class="dois">2</div>
+       <div class="dois">2</div>
     </div>
 </body>
 </html>
