Criando Seletores por Atributo

--- a/aula19-20 (583-584)/index.html
+++ b/aula19-20 (583-584)/index.html
@@ -10,20 +10,11 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<body class="error">
-    <div class="pai">
-        <div class="dois">2</div>
-       <div class="um">1</div>
-       <div class="dois">2</div>
-       <div class="dois">2</div>
-       <div class="dois">2</div>
-       <div class="dois">2</div>
-       <div class="dois">2</div>
-       <div class="dois">2</div>
-       <div class="dois">2</div>
-       <div class="dois">2</div>
-       <div class="dois">2</div>
-       <div class="dois">2</div>
-    </div>
+<body>
+    <h1 class="heading" meu-atributo="valor">Lorem</h1>
+    <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia cumque illum facilis quo id ullam in, nostrum temporibus quibusdam vel recusandae eveniet iusto ipsam velit mollitia, atque iste accusamus possimus.</p>
+
+    <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia cumque illum facilis quo id ullam in, nostrum temporibus quibusdam vel recusandae eveniet iusto ipsam velit mollitia, atque iste accusamus possimus.</p>
 </body>
+
 </html>
