Aula 21 (585) - Seletores do CSS

--- a/aula19-20 (583-584)/index.html
+++ b/aula19-20 (583-584)/index.html
@@ -12,10 +12,16 @@
 
 <body>
     <input type="checkbox" name="check" id="check" checked>
-    <h1 class="heading" meu-atributo="valor">Lorem</h1>
+    <h1 class="heading" meu-atributo="valor1 valor2 valor3">Lorem</h1>
     <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia cumque illum facilis quo id ullam in, nostrum temporibus quibusdam vel recusandae eveniet iusto ipsam velit mollitia, atque iste accusamus possimus.</p>
 
     <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia cumque illum facilis quo id ullam in, nostrum temporibus quibusdam vel recusandae eveniet iusto ipsam velit mollitia, atque iste accusamus possimus.</p>
+
+    <div class="pai">
+        <h1 class="um">Ola</h1>
+        <p class="dois">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet incidunt laborum nostrum sunt aliquid hic aut non quasi natus explicabo minima, provident fugiat omnis reprehenderit minus exercitationem error qui facilis.</p>
+    </div>
+
 </body>
 
 </html>
