--- a/aula19-20 (583-584)/index.html
+++ b/aula19-20 (583-584)/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <input type="checkbox" name="check" id="check" checked>
-    <h1 class="heading" meu-atributo="valor valor-a valor-b valor-c">Lorem</h1>
+    <h1 class="heading" meu-atributo="valor valor-a valor-b valor-c valor">Lorem</h1>
     <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia cumque illum facilis quo id ullam in, nostrum temporibus quibusdam vel recusandae eveniet iusto ipsam velit mollitia, atque iste accusamus possimus.</p>
 
     <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia cumque illum facilis quo id ullam in, nostrum temporibus quibusdam vel recusandae eveniet iusto ipsam velit mollitia, atque iste accusamus possimus.</p>
