--- a/aula22 (586)/index.html
+++ b/aula22 (586)/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
-    <input type="text">
+    <input type="text" disabled>
     <input type="checkbox">
     <h1 class="heading">Lorem</h1>
     <p class="p"><a href="#">Lorem ipsum</a> Lorem ipsum dolor sit amet <a href="##">consectetur adipisicing elit</a>. Velit nam nesciunt eligendi? Repellendus fugit accusamus ipsa placeat, deserunt praesentium inventore enim a neque earum nulla dolore odit illo molestias libero!
