First e Last child

--- a/aula22 (586)/index.html
+++ b/aula22 (586)/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,15 @@
     <title>Aula 22 - 582 - Pseudo-Clsses</title>
     <link rel="stylesheet" href="./assets/style.css">
 </head>
+
 <body>
-    <input type="checkbox">
-    <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, ad. Officiis nihil deleniti ducimus explicabo accusamus quae enim atque veniam sequi eaque, harum dolore soluta nostrum ad impedit fugiat accusantium.</p>
-    <h1 class="heading">Lorem</h1>
-    <p class="p"><a href="#">Lorem ipsum</a> Lorem ipsum dolor sit amet <a href="##">consectetur adipisicing elit</a>. Velit nam nesciunt eligendi? Repellendus fugit accusamus ipsa placeat, deserunt praesentium inventore enim a neque earum nulla dolore odit illo molestias libero!
-    </p>
-    <input type="text" disabled>
+    <div class="pai">
+        <ul class="lista">
+            <li>item 1</li>
+            <li>item 2</li>
+            <li>item 3</li>
+        </ul>
+    </div>
 </body>
+
 </html>
