--- a/aula22 (586)/index.html
+++ b/aula22 (586)/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <input type="text" required>
+    <input type="text">
     <div class="pai">
         <ul class="lista">
             <li>item 1</li>
