Pseudo-elements ::placeholder, selection, first-line

--- a/aula25 (589)/index.html
+++ b/aula25 (589)/index.html
@@ -9,11 +9,16 @@
 </head>
 
 <body>
-    <ul>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-    </ul>    
+    <p>
+        <input class="form-field" type="text" placeholder="Olá">
+    </p>
+    <p>
+        <input type="text" placeholder="oie">
+    </p>
+   <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ab error inventore? Ipsum in fuga, provident, dignissimos deleniti esse odit sapiente pariatur asperiores consequatur quisquam facere maxime doloremque accusamus tempora!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ab error inventore? Ipsum in fuga, provident, dignissimos deleniti esse odit sapiente pariatur asperiores consequatur quisquam facere maxime doloremque accusamus tempora!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ab error inventore? Ipsum in fuga, provident, dignissimos deleniti esse odit sapiente pariatur asperiores consequatur quisquam facere maxime doloremque accusamus tempora!
+   </p>  
 </body>
 </html>
