--- a/aula26 (590)/index.html
+++ b/aula26 (590)/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 
-<body>
+<body id="b" class="bclass">
     <p class="p" id="p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus nam maiores commodi? Hic molestias possimus alias dolores ratione, sed vitae, velit, provident accusamus facere voluptates quos incidunt voluptatibus aspernatur sit.</p>
     <p class="p">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit earum omnis, ullam magnam deserunt libero veritatis! Facere praesentium maxime officia eligendi, impedit recusandae eos, beatae fuga, aperiam fugit voluptate minus.
