Aula 29 (593) - Grid com float

--- a/aula29 (593)/index.html
+++ b/aula29 (593)/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,42 @@
     <title>Aula 29 (593) - Float e Display</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
     <div class="grid">
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
+        <div class="col">
+            <div class="conteudo">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="conteudo">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="conteudo">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="conteudo">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="conteudo">
+                conteudo
+            </div>
+        </div>
+        <div class="col">
+            <div class="conteudo">
+                conteudo
+            </div>
+        </div>
     </div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ab non quibusdam iure animi dolores aut possimus, quisquam, consequuntur modi debitis eius tempore in neque necessitatibus, doloremque excepturi eum iste.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ab non quibusdam iure animi dolores aut possimus,
+        quisquam, consequuntur modi debitis eius tempore in neque necessitatibus, doloremque excepturi eum iste.</p>
 </body>
+
 </html>
