--- a/aula31 (595)/index.html
+++ b/aula31 (595)/index.html
@@ -8,7 +8,17 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <div class="pai">
+    <a href="#one">One</a>
+    <a href="#two">Two</a>
+    <a href="#three">Three</a>
+    <div class="pai" id="one">
+        <p> 
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, sed sequi voluptatibus facilis a obcaecati recusandae laudantium ab alias eaque aliquam odit, repellendus hic quasi qui iste! Sit, corporis facilis?</p>
+    </div>
+    <div class="pai color-one" id="two">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, sed sequi voluptatibus facilis a obcaecati recusandae laudantium ab alias eaque aliquam odit, repellendus hic quasi qui iste! Sit, corporis facilis?</p>
+    </div>
+    <div class="pai color-two" id="three">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, sed sequi voluptatibus facilis a obcaecati recusandae laudantium ab alias eaque aliquam odit, repellendus hic quasi qui iste! Sit, corporis facilis?</p>
     </div>
 </body>
