CSS unidades de medida: %

--- a/aula31 (595)/index.html
+++ b/aula31 (595)/index.html
@@ -12,6 +12,8 @@
     <a href="#two">Two</a>
     <a href="#three">Three</a>
     <div class="pai" id="one">
+        <div></div>
+        <br>
         <p> 
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, sed sequi voluptatibus facilis a obcaecati recusandae laudantium ab alias eaque aliquam odit, repellendus hic quasi qui iste! Sit, corporis facilis?</p>
     </div>
