Alterando e melhorando o codigo css

--- a/testes/teste-aula31/unidadesCSS.html
+++ b/testes/teste-aula31/unidadesCSS.html
@@ -12,15 +12,15 @@
     <a href="#two">Div2</a>
     <a href="#three">Div3</a>
 
-    <div class="div1" id="one">
+    <div class="div1 pattern" id="one">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae itaque laborum necessitatibus odit, eveniet maiores minima in nulla labore corrupti veniam nisi impedit debitis molestias voluptates suscipit reprehenderit harum ipsa.</p>
     </div>
 
-    <div class="div2" id="two">
+    <div class="div2 pattern" id="two">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas quidem blanditiis asperiores numquam, at commodi obcaecati ducimus fugiat neque voluptate eum dolore? Laborum quae itaque similique magnam nemo adipisci saepe?</p>
     </div>
 
-    <div class="div3" id="three">
+    <div class="div3 pattern" id="three">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos repudiandae id ea! Debitis dignissimos alias velit totam nemo atque. Natus necessitatibus unde in amet voluptate sunt, voluptatum mollitia voluptas ut.</p>
     </div>
 </body>
