--- a/aula34 (597)/index.html
+++ b/aula34 (597)/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,67 @@
     <title>Aula 34 (597)</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
     <div class="pai">
-        <div class="filha1"></div>
-        <div class="filha2"></div>
-        <div class="filha3">
-            <span class="outra">123</span>
-        </div>
-        <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, harum ad eaque temporibus illum ex esse sunt expedita nisi mollitia ut impedit reiciendis minus tempore, veniam a incidunt sed fuga!</span><span>Velit neque, animi dolorem labore beatae iure voluptatum quam deleniti sunt, exercitationem molestiae dolor tenetur? Modi, cumque. Possimus omnis nostrum reprehenderit quaerat? Sit et cumque, provident omnis nam recusandae saepe?</span><span>Animi numquam possimus consequuntur exercitationem quo laborum voluptates hic laudantium asperiores, impedit nam, provident quaerat sapiente eius ipsum rerum. Provident consequatur blanditiis modi, delectus eaque laborum illo quaerat. Modi, natus.</span><span>Explicabo non quae dolores, quisquam eaque corrupti nisi distinctio unde voluptatum asperiores animi nam odit iure fugit ipsam? Sed repellat nihil cumque, maiores commodi ex. Voluptatum numquam consectetur dolorem perspiciatis?</span><span>Eos, nesciunt deserunt! Numquam aperiam obcaecati molestias sit inventore voluptatibus incidunt in aliquid tempora iste minus fuga praesentium dolore, saepe quaerat aspernatur repudiandae, necessitatibus iusto, at doloremque? Suscipit, repudiandae maiores.</span><span>Dolorum, tempore hic! Natus nesciunt nemo atque perferendis architecto vel accusantium voluptate, tempore, ea explicabo pariatur modi! Ea obcaecati incidunt, beatae debitis veniam, atque eius maiores nesciunt, perferendis asperiores quas!</span></p>
+        <ul>
+            <li class="sticky">A</li>
+            <li>a</li>
+            <li>a</li>
+            <li>a</li>
+            <li>a</li>
+            <li>a</li>
+            <li>a</li>
+            <li>a</li>
+            <li>a</li>
+            <li>a</li>
+            <li>a</li>
+            <li class="sticky">B</li>
+            <li>b</li>
+            <li>b</li>
+            <li>b</li>
+            <li>b</li>
+            <li>b</li>
+            <li>b</li>
+            <li>b</li>
+            <li>b</li>
+            <li>b</li>
+            <li>b</li>
+            <li>b</li>
+            <li>b</li>
+            <li>b</li>
+            <li>b</li>
+            <li>b</li>
+            <li>b</li>
+            <li>b</li>
+            <li>b</li>
+            <li>b</li>
+            <li>b</li>
+            <li class="sticky">C</li>
+            <li>c</li>
+            <li>c</li>
+            <li>c</li>
+            <li>c</li>
+            <li>c</li>
+            <li>c</li>
+            <li>c</li>
+            <li>c</li>
+            <li>c</li>
+            <li>c</li>
+            <li>c</li>
+            <li>c</li>
+            <li>c</li>
+            <li>c</li>
+            <li>c</li>
+            <li>c</li>
+            <li>c</li>
+            <li>c</li>
+            <li>c</li>
+            <li>c</li>
+        </ul>
+
+
     </div>
 </body>
+
 </html>
