--- a/aula36 (599)/index.html
+++ b/aula36 (599)/index.html
@@ -12,8 +12,7 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#sobre-nos">Sobre nós</a></li>
-                <li><a href="#contatos">Contatos</a></li>
+                <li><a href="#full-page">Sobre nós</a></li>
             </ul>
         </nav>
     </div>
@@ -36,21 +35,11 @@
         <div class="filha">
             <div class="conteudo">Conteudo</div>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, magni nemo. Odit in perspiciatis sequi dolorum consectetur voluptatibus, similique assumenda veritatis, iure deleniti temporibus impedit corrupti quam fugit placeat? Fuga!</p>
-        </div>
-      
     </div>
-
-    <div class="irmao1" id="sobre-nos">
+    <section class="full-page" id="sobre-nos">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quis, earum optio dolor facere voluptate sit in magni doloremque debitis consequuntur iste explicabo atque odio autem minima! Quae, ipsa distinctio.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut accusamus illo quisquam blanditiis et placeat voluptas ducimus! A distinctio delectus et consectetur amet, similique facilis doloremque omnis dignissimos, ea sint.</p>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis at pariatur, vitae provident odio iure ad beatae nam eos inventore alias expedita. Earum a dolor ea laudantium dolore aperiam! Optio.</p>
-    </div>
-
-    <div class="irmao2" id="contatos">
-        <p>1234567</p>
-        
-        <p>12345678</p>
-    </div>
+    </section>
 </body>
 </html>
