Testando usar a tag Select

--- a/testes/revisando-pontos-importantes/index.html
+++ b/testes/revisando-pontos-importantes/index.html
@@ -71,6 +71,15 @@
         <label for="senha">Senha:</label>
         <input type="password" name="password" id="password">
         <button>Enviar</button>
+
+        <label for="selecao">Selecione</label>
+        <select name="selecao" id="selecao">
+            <optgroup label="teste 1">
+                <option value="gremio">Gremio</option>
+                <option value="Cruzeiro">Cruzeiro</option>
+                <option value="Corinthians">Corinthians</option>
+            </optgroup>
+        </select>
     </form>
 </body>
 </html>
