Testando seletor de filhos diretos (>)

--- a/testes/revisando-pontos-importantes/seletores.html
+++ b/testes/revisando-pontos-importantes/seletores.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .pai {
+            background-color: #f5f;
+        }
+
+        .pai p > a{
+            background-color: #2b28c6;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <div class="pai">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quasi officia dicta hic ea eligendi expedita
+            nemo modi. Vitae dignissimos voluptatem corporis autem laborum pariatur officia rerum in saepe. Vitae.
+        </p>
+        <article class="filha">
+            <h2>Titulo</h2>
+            <p>2Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum provident voluptatem quas aliquid culpa sapiente temporibus, facilis, nemo omnis veritatis quia cupiditate delectus incidunt ratione fugiatatque similique fuga obcaecati!
+                <a href="#">LINK</a> 
+            </p>
+            <p>lor22222222222</p>
+
+            <div class="filha">
+                <p>sssssssssssssssssssssssssssssssssssssssssssssssaqQQQQQQQQQQQQQQQQQ</p>
+            </div>
+        </article>
+    </div>
 </body>
+
 </html>
