Testando seletor de filhos diretos (>)

--- a/testes/revisando-pontos-importantes/seletores.html
+++ b/testes/revisando-pontos-importantes/seletores.html
@@ -10,7 +10,7 @@
             background-color: #f5f;
         }
 
-        .pai p > a{
+        article > p{
             background-color: #2b28c6;
         }
     </style>
@@ -26,11 +26,12 @@
             <p>2Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum provident voluptatem quas aliquid culpa sapiente temporibus, facilis, nemo omnis veritatis quia cupiditate delectus incidunt ratione fugiatatque similique fuga obcaecati!
                 <a href="#">LINK</a> 
             </p>
-            <p>lor22222222222</p>
 
             <div class="filha">
                 <p>sssssssssssssssssssssssssssssssssssssssssssssssaqQQQQQQQQQQQQQQQQQ</p>
             </div>
+
+            <p>lor22222222222</p>
         </article>
     </div>
 </body>
