Seletor adjacente subling selector (+)

--- a/testes/revisando-pontos-importantes/seletores.html
+++ b/testes/revisando-pontos-importantes/seletores.html
@@ -13,6 +13,10 @@
         article > p{
             background-color: #2b28c6;
         }
+
+        .container h1 + p{
+            background-color: tomato;
+        }
     </style>
 </head>
 
@@ -33,6 +37,21 @@
 
             <p>lor22222222222</p>
         </article>
+    </div>
+
+
+    <div class="container">
+        <h1>Titulo</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore doloremque minima provident debitis maxime eos fuga explicabo dolor facilis, distinctio aut suscipit fugiat. Aspernatur quaerat neque aliquam in? Nobis, accusantium.
+        </p>
+        <h1>Titulo</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus et, officia minus vero culpa sint porro delectus nihil facilis, alias nemo laboriosam est? Mollitia ullam, consequuntur rerum non explicabo doloremque.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus et, officia minus vero culpa sint porro delectus nihil facilis, alias nemo laboriosam est? Mollitia ullam, consequuntur rerum non explicabo doloremque.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus et, officia minus vero culpa sint porro delectus nihil facilis, alias nemo laboriosam est? Mollitia ullam, consequuntur rerum non explicabo doloremque.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus et, officia minus vero culpa sint porro delectus nihil facilis, alias nemo laboriosam est? Mollitia ullam, consequuntur rerum non explicabo doloremque.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus et, officia minus vero culpa sint porro delectus nihil facilis, alias nemo laboriosam est? Mollitia ullam, consequuntur rerum non explicabo doloremque.</p>
+
     </div>
 </body>
 
